--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
-  "name": "my-app",
+  "name": "cra-typescript-design-system",
   "version": "0.1.0",
-  "private": true,
+  "description": "A React boilerplate for Rapid UI",
+  "author": "Andi <andideve0@gmail.com>",
   "dependencies": {
+    "@andideve/design-system": "^0.1.0",
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -12,6 +16,7 @@
     "@types/react-dom": "^18.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.4.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.8.3",
     "web-vitals": "^2.1.4"
